config parser projects group

--- a/src/TIC.ParserStart/TIC.ParserStart.csproj
+++ b/src/TIC.ParserStart/TIC.ParserStart.csproj
@@ -1,7 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
-    <PropertyGroup>
-        <TargetFramework>netcoreapp2.1</TargetFramework>
-    </PropertyGroup>
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
+  </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TIC.Parser\TIC.Parser.csproj" />
+  </ItemGroup>
 </Project>
