--- a/src/TIC.ApiClient/TIC.ApiClient.csproj
+++ b/src/TIC.ApiClient/TIC.ApiClient.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="RESTClient.NET" Version="0.8.0" />
+    <PackageReference Include="RestSharp" Version="106.3.1" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
